--- a/STSEval/app/templates/app/coach.html
+++ b/STSEval/app/templates/app/coach.html
@@ -3,8 +3,17 @@
 {% block content %}
 {% load staticfiles %}
 {% include "chat/chat.html" %}
-<div id="LockBlackout" style="width:100%;height:100%;background-color:#000000;opacity: .2;position:fixed;z-index:103;display:none" onclick="HideDetails()"></div>
-<div align="center" style="margin:auto" >
+
+<div align="center" style="margin:auto;position:relative" >
+    <div id="divFallArea" class="coach-fall-container" align="center" style="display:none">
+        <div class="row no-gutters justify-content-center">
+            <div class="col-9 col-md-4 col-lg-3 coach-fall-background pt-1 pb-2">
+                <div>FALL</div>
+                <div id="divFallTimer" class="coach-fall-timer">&nbsp;</div>
+                <div id="divFallCredit" class="coach-fall-credit">&nbsp;</div>
+            </div>
+        </div>
+    </div>
     {% include "app/event_select.html" %}  
     <div class="">
         <div id="divStatus" style="margin:auto;text-align:center;" class="timer-red"></div>
@@ -31,6 +40,8 @@
     var AthleteID = -1;
     var Status = "";
     var StartListChange = -1;
+    var FallTimerStart;
+    var FallTimerInterval;
 
     var db = firebase.firestore();
     db.collection("sessions").doc(Session).collection("event_managers").doc(ev)
@@ -38,6 +49,10 @@
             UpdateStatus(doc);
         });
     SetupChatListener();
+     db.collection("sessions").doc(Session).collection("event_managers").doc(ev + "_falls")
+        .onSnapshot(function (doc) {
+            UpdateFalls(doc);
+        });
 
     
     function UpdateStatus(doc) {
@@ -92,6 +107,32 @@
 
     function SwapEvent(evIn) {
         window.location = "/coach/" + evIn;
+    }
+
+    function UpdateFalls(doc) {
+        console.log(doc.data());
+        if (doc.data().team == Team) {
+            if (doc.data().fall == true) {
+                clearInterval(FallTimerInterval);
+                FallTimerStart = doc.data().start.seconds;
+                FallTimerInterval = setInterval(UpdateFallTimer, 1000);
+                UpdateFallTimer();
+                $("#divFallCredit").html(doc.data().credit);
+                $("#divFallArea").show();
+            }
+            else {
+                clearInterval(FallTimerInterval);
+                $("#divFallArea").hide();
+            }
+        }
+        else {
+            clearInterval(FallTimerInterval);
+            $("#divFallArea").hide();
+        }
+    }
+
+    function UpdateFallTimer() {
+        $("#divFallTimer").html((Math.round(Date.now() / 1000) - FallTimerStart) + " seconds");
     }
 
 </script>
