--- a/STSEval/app/templates/app/evideo.html
+++ b/STSEval/app/templates/app/evideo.html
@@ -14,7 +14,7 @@
                  
                 <div id="play-video-container" class="live-container d-flex align-items-center justify-content-center">
                             <div id="player-waiting"><h1>Waiting for Camera</h1></div>
-                            <video id="player-video" autoplay playsinline controls class="live-video" style="display:none"></video>
+                            <video id="player-video" autoplay playsinline controls muted class="live-video" style="display:none"></video>
                         </div>
             </td>
             <td valign="top">
