--- a/STSEval/app/templates/app/spectate.html
+++ b/STSEval/app/templates/app/spectate.html
@@ -17,7 +17,7 @@
                     </div>
                     
                     <div id="player-waiting1" style="height:480px;display:flex" class="align-items-center"><h1>Waiting for Camera</h1></div>
-                    <video id="player-video1" class="live-video" style="display:none" controls autoplay></video>
+                    <video id="player-video1" class="live-video" style="display:none" controls autoplay muted></video>
                 </div>
                 <div id="divAthlete1" align="center"></div>
             </div>
@@ -25,7 +25,7 @@
             <div class="col-12 col-xl-6 pr-4" align="right">
                 <div id="play-video-container1" class="live-container d-flex align-items-center justify-content-center flex-column">
                     <div id="player-waiting1" style="height:480px;display:flex" class="align-items-center"><h1>Waiting for Camera</h1></div>
-                    <video id="player-video1" class="live-video" style="display:none" controls autoplay></video>
+                    <video id="player-video1" class="live-video" style="display:none" controls autoplay muted></video>
                     <div class="d-flex w-100">
                         {% for ev in events %}
                             <div class="flex-grow-1">
@@ -39,7 +39,7 @@
             <div class="col-12 col-xl-6" align="left">
                 <div id="play-video-container2" class="live-container d-flex align-items-center justify-content-center flex-column">
                     <div id="player-waiting2" style="height:480px;display:flex" class="align-items-center"><h1>Waiting for Camera</h1></div>
-                    <video id="player-video2" class="live-video" style="display:none" controls autoplay></video>
+                    <video id="player-video2" class="live-video" style="display:none" controls autoplay muted></video>
                     <div class="d-flex w-100">
                         {% for ev in events %}
                             <div class="flex-grow-1">
