--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -1081,7 +1081,7 @@
                 }
                 else {
                     alert("All Athletes Done, Going To Scoreboard");
-                    window.location = "/scoreboard/";
+                    window.location = "/scoreboard/" + ev;
                 }
 
             }
