--- a/STSEval/app/templates/app/scoreboard.html
+++ b/STSEval/app/templates/app/scoreboard.html
@@ -216,7 +216,7 @@
         //$('#divShorthandResults').empty();
         for (var i = 0; i < data.length; i++) {
             data[i]["Place"] = i + 1;
-            data[i]["total_score"] = FormatWith0(data[i]["total_score"]);
+            data[i]["total_score"] = FormatWith0(Math.round((data[i]["total_score"] + Number.EPSILON) * 100) / 100);
         }
 
         $("#jsGrid").jsGrid({
