--- a/STSEval/app/templates/app/d1_edit_score.html
+++ b/STSEval/app/templates/app/d1_edit_score.html
@@ -7,8 +7,8 @@
 	    <tr><td id="tdNeutralDed" align="right">Neutral Deductions:</td><td><input type="text" id="txtNeutralDed" placeholder="Neutral Ded." class="entrybox" onkeypress="return isNumberKey(event)"  value="{{loadroutine.score_neutral}}"></td></tr>
     </table>
     <div class="d-flex">
-        <button href="#" id="btnEditDone" type="button" class="btn btn-success col-6 mb-2 mr-1" onclick="EditDScoreDoneClick()">Save</button>
-        <button href="#" id="btnEditDoneCancel" type="button" class="btn btn-red col-6 mb-2" onclick="EditDScoreCancelClick()">Cancel</button>
+        <button href="#" id="btnEditDone" type="button" class="btn btn-success col-6 mb-2 mr-1" onclick="EditScoreDoneClick()">Save</button>
+        <button href="#" id="btnEditDoneCancel" type="button" class="btn btn-red col-6 mb-2" onclick="EditScoreCancelClick()">Cancel</button>
     </div>
 {% else %}
     You do not have edit permission
