vault remove group

--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -1312,6 +1312,12 @@
             }
             $("#tdGroups").show();
         }
+        if (ev == "V") {
+            $("#txtGroups").val('0');
+            $("#txtGroups").hide();
+            $("#tdGroups").hide();
+            $("#lblGroups").hide();
+        }
     }
 
     function CheckJudgesReady() {
