--- a/STSEval/app/templates/app/scoreboard.html
+++ b/STSEval/app/templates/app/scoreboard.html
@@ -166,6 +166,7 @@
             data[i]["score_e3"] = FormatWith0(data[i]["score_e3"]);
             data[i]["score_e4"] = FormatWith0(data[i]["score_e4"]);
             data[i]["score_final"] = FormatWith0(data[i]["score_final"]);
+            data[i]["score_neutral"] = FormatWith0(data[i]["score_neutral"]);
 
 
         }
@@ -188,6 +189,7 @@
                 { name: "athlete__team__name", title: "Team", type: "text" },
                 { name: "athlete__name", title: "Gymnast", type: "text" },
                 { name: "score_d", title: "D-Score<hr class='jsgrid-hr'>Start Value", type: "number" },
+                { name: "score_neutral", title: "Neutral<br/>Deductions", type: "number" },
                 { name: "score_e", title: "E-Score<hr class='jsgrid-hr'>Deductions", type: "number" },
                 { name: "score_e1", title: "E-1", type: "number" },
                 { name: "score_e2", title: "E-2", type: "number" },
